--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,16 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3D3D3">
+    android:background="?android:attr/windowBackground">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        app:title="Home"
-        app:titleTextColor="#000"
-        app:layout_collapseMode="pin"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/primary"
+        app:titleTextColor="@color/onPrimary"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <FrameLayout
@@ -21,9 +19,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="56dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_gravity="center"
-        android:layout_marginTop="?attr/actionBarSize"
-        />
+        android:layout_gravity="center" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
@@ -31,9 +27,8 @@
         android:layout_height="56dp"
         android:layout_gravity="bottom"
         app:menu="@menu/bottom_nav_menu"
-        android:background="@android:color/white"
+        android:background="@color/surface"
         app:itemIconTint="@color/nav_item_color"
-        app:itemTextColor="@color/nav_item_color"
-        />
+        app:itemTextColor="@color/nav_item_color" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
