--- a/app/src/main/res/layout/fragment_incident_list.xml
+++ b/app/src/main/res/layout/fragment_incident_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_background">
+    android:background="@color/background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:singleSelection="true">
 
@@ -30,7 +31,7 @@
                 app:chipStartPadding="14dp"
                 app:chipEndPadding="14dp"
                 app:checkedIconVisible="false"
-                app:rippleColor="@color/purple_200" />
+                app:rippleColor="@color/primary" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chipLow"
@@ -78,10 +79,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/purple_500"
+        android:layout_margin="24dp"
+        android:backgroundTint="@color/primary"
         android:contentDescription="Add new incident"
-        app:tint="@color/white"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:tint="@color/onPrimary"
+        app:srcCompat="@drawable/ic_add_alert" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout> 
