--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="onPrimary">#FFFFFF</color>
     <color name="onBackground">#222222</color>
     <color name="onSurface">#222222</color>
+    <color name="hintColor">#BF222222</color>
 </resources>
