--- a/app/src/main/res/layout/fragment_incident_list.xml
+++ b/app/src/main/res/layout/fragment_incident_list.xml
@@ -11,9 +11,10 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/filterChipGroup"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:paddingTop="16dp"
             android:paddingBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,6 +32,8 @@
                 app:chipStartPadding="14dp"
                 app:chipEndPadding="14dp"
                 app:checkedIconVisible="false"
+                app:chipBackgroundColor="@color/chip_selector"
+                android:textColor="@color/chip_text_selector"
                 app:rippleColor="@color/primary" />
 
             <com.google.android.material.chip.Chip
@@ -38,6 +41,8 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:chipBackgroundColor="@color/chip_selector"
+                android:textColor="@color/chip_text_selector"
                 android:text="Low" />
 
             <com.google.android.material.chip.Chip
@@ -45,6 +50,8 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:chipBackgroundColor="@color/chip_selector"
+                android:textColor="@color/chip_text_selector"
                 android:text="Medium" />
 
             <com.google.android.material.chip.Chip
@@ -52,6 +59,8 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:chipBackgroundColor="@color/chip_selector"
+                android:textColor="@color/chip_text_selector"
                 android:text="High" />
 
         </com.google.android.material.chip.ChipGroup>
