--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,8 @@
     <color name="onBackground">#222222</color>
     <color name="onSurface">#222222</color>
     <color name="hintColor">#BF222222</color>
+    <color name="chip_unselected_bg">#222222</color>
+    <color name="chip_selected_bg">#17407B</color>
+    <color name="chip_unselected_text">#ffffff</color>
+    <color name="chip_selected_text">#FFFFFF</color>
 </resources>
