updated the icons

--- a/app/src/main/res/layout/fragment_incident_detail.xml
+++ b/app/src/main/res/layout/fragment_incident_detail.xml
@@ -52,8 +52,8 @@
             app:chipMinHeight="36dp"
             app:chipStartPadding="14dp"
             app:chipEndPadding="14dp"
-            app:chipIcon="@drawable/ic_severity_alert"
-            app:chipIconTint="@color/severity_high"
+            app:chipIcon="@drawable/ic_warning"
+            app:chipIconTint="@color/black"
             app:chipIconVisible="true"
             app:layout_constraintTop_toBottomOf="@id/detailTitle"
             app:layout_constraintStart_toStartOf="parent"
