Updated layout of Chip Group

--- a/app/src/main/res/layout/fragment_incident_list.xml
+++ b/app/src/main/res/layout/fragment_incident_list.xml
@@ -29,13 +29,13 @@
                 android:checked="true"
                 android:text="All"
                 app:chipIcon="@drawable/ic_check_circle"
-                app:chipIconTint="@color/secondary"
                 app:chipIconVisible="true"
                 app:chipCornerRadius="16dp"
                 app:chipMinHeight="40dp"
-                app:chipStartPadding="8dp"
+                app:chipStartPadding="6dp"
                 app:chipEndPadding="6dp"
                 app:checkedIconVisible="false"
+                android:layout_marginStart="4dp"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
                 app:rippleColor="@color/primary" />
@@ -88,8 +88,9 @@
                 app:chipCornerRadius="16dp"
                 app:chipMinHeight="40dp"
                 app:chipStartPadding="8dp"
-                app:chipEndPadding="6dp"
+                app:chipEndPadding="3dp"
                 app:checkedIconVisible="false"
+                android:layout_marginEnd="4dp"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
                 app:rippleColor="@color/severity_high" />
