--- a/app/src/main/res/layout/fragment_incident_list.xml
+++ b/app/src/main/res/layout/fragment_incident_list.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
             android:paddingBottom="8dp"
-            android:layout_marginHorizontal="3dp"
+            android:layout_marginHorizontal="5dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
                 app:chipStartPadding="8dp"
                 app:chipEndPadding="3dp"
                 app:checkedIconVisible="false"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="5dp"
                 app:chipBackgroundColor="@color/chip_selector"
                 android:textColor="@color/chip_text_selector"
                 app:rippleColor="@color/severity_high" />
@@ -100,14 +100,13 @@
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/filterChipGroup">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/incidentsRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:paddingBottom="80dp" />
 
